--- a/DutchTreat/package.json
+++ b/DutchTreat/package.json
@@ -3,10 +3,11 @@
   "name": "asp.net",
   "private": true,
   "dependencies": {
-    "jquery": "3.4.1",
-    "bootstrap": "4.3.1",
+    "jquery": "^3.4.1",
+    "bootstrap": "^4.1.1",
     "jquery-validation": "^1.17.0",
-    "jquery-validation-unobtrusive": "^3.2.10"
+    "jquery-validation-unobtrusive": "^3.2.10",
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {}
 }
