--- a/DutchTreat/config.json
+++ b/DutchTreat/config.json
@@ -7,7 +7,9 @@
 	},
 	"Logging": {
 		"LogLevel": {
-			"Default": "Warning"
+			"Default": "Information",
+			"DutchTreat": "Information", /* this is redundant, since it's caught in the default, but shows how we could specify log level for custom logs */
+			"Microsoft": "Warning" /* for every log that starts with the word Microsoft, show only warnings */
 		}
 	}
 }
